--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
+anyio==4.7.0
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
 blinker==1.9.0
+certifi==2024.8.30
+chardet==3.0.4
+charset-normalizer==3.4.0
 click==8.1.7
+deep-translator==1.11.4
 dominate==2.9.1
 Flask==3.1.0
 Flask-Bootstrap==3.3.7.1
+Flask-SQLAlchemy==3.1.1
+googletrans==4.0.0rc1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.12.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+requests==2.32.3
+rfc3986==1.5.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+urllib3==2.2.3
 visitor==0.1.3
 Werkzeug==3.1.3
